--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                             <div class="card-footer">
                                 <span class="date">Română</span>
                                 <div class="card-actions">
-                                    <a href="../subordonata.pdf" class="view-btn" target="_blank">Descarcă</a>
+                                    <a href="subordonata.pdf" class="view-btn" target="_blank">Descarcă</a>
                                 </div>
                             </div>
                         </div>
