--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zM11 7h2v2h-2V7zm0 4h2v6h-2v-6z"></path></svg>
                 </span>
                 <div class="info-text">
-                    Materialele sunt create cu instrumente digitale avansate. Doriți resurse personalizate? 
+                Materialele au fost create cu ajutorul unor unelte, puteti si voi sa incercati, dar daca nu puteti,
                     <span class="button-wrapper"><a href="#vip-area" class="contact-btn" onclick="smoothScrollToVip(event)">Contactați-ne</a></span>
-                    și le dezvoltăm pentru voi.
+                    și le facem pentru voi.
                 </div>
             </div>
             
